crates/oomtop-core/tests/snapshots/ux_headline__working_generating.snap
---
source: crates/oomtop-core/tests/ux_headline.rs
expression: "render(&input_from(&cool, &h, mode)).text"
---
Working — sd-server generating 3/6 · 8.1 s/step, ~24s left. 8.9 GB headroom.
